ULTIMOS CAMBIOS EN LA API ROPA

--- a/Footprints of Friends/ropa.html
+++ b/Footprints of Friends/ropa.html
@@ -28,207 +28,24 @@
     
 
     <!-- Tarjeta de productos -->
-    <div class="album py-2 bg-light">
+    <br>
+
+
     <div class="container">
-      <div id="product-item" class="row">
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-
-          <div class="card-mb-4 box-shadow">
-            <div class="text-center">
-              <img class="card-img-top thumbnail-product" src="img/pantalon.jpg" class="card-img-top" alt="">
-            </div>
-
-            <div class="card-body">
-              <p class="card-text">
-              <div class="lead text-secondary fw-bold">
-                OFERTA
-              </div>
-              <br>
-              <div class="lead text-danger">
-                <span class="sale-real-price fw-bold">
-                  8.999
-                </span>
-              </div>
-              <br>
-              Pantalón de genero mujer color beige
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-
-          <div class="card-mb-4 box-shadow">
-            <div class="text-center">
-              <img class="card-img-top thumbnail-product" src="img/pantalon.jpg" class="card-img-top" alt="">
-            </div>
-
-            <div class="card-body">
-              <p class="card-text">
-              <div class="lead text-secondary fw-bold">
-                OFERTA
-              </div>
-              <br>
-              <div class="lead text-danger">
-                <span class="sale-real-price fw-bold">
-                  8.999
-                </span>
-              </div>
-              <br>
-              Pantalón de genero mujer color beige
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-
-          <div class="card-mb-4 box-shadow">
-            <div class="text-center">
-              <img class="card-img-top thumbnail-product" src="img/pantalon.jpg" class="card-img-top" alt="">
-            </div>
-
-            <div class="card-body">
-              <p class="card-text">
-              <div class="lead text-secondary fw-bold">
-                OFERTA
-              </div>
-              <br>
-              <div class="lead text-danger">
-                <span class="sale-real-price fw-bold">
-                  8.999
-                </span>
-              </div>
-              <br>
-              Pantalón de genero mujer color beige
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-
-          <div class="card-mb-4 box-shadow">
-            <div class="text-center">
-              <img class="card-img-top thumbnail-product" src="img/pantalon.jpg" class="card-img-top" alt="">
-            </div>
-
-            <div class="card-body">
-              <p class="card-text">
-              <div class="lead text-secondary fw-bold">
-                OFERTA
-              </div>
-              <br>
-              <div class="lead text-danger">
-                <span class="sale-real-price fw-bold">
-                  8.999
-                </span>
-              </div>
-              <br>
-              Pantalón de genero mujer color beige
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-
-          <div class="card-mb-4 box-shadow">
-            <div class="text-center">
-              <img class="card-img-top thumbnail-product" src="img/pantalon.jpg" class="card-img-top" alt="">
-            </div>
-
-            <div class="card-body">
-              <p class="card-text">
-              <div class="lead text-secondary fw-bold">
-                OFERTA
-              </div>
-              <br>
-              <div class="lead text-danger">
-                <span class="sale-real-price fw-bold">
-                  8.999
-                </span>
-              </div>
-              <br>
-              Pantalón de genero mujer color beige
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-
-          <div class="card-mb-4 box-shadow">
-            <div class="text-center">
-              <img class="card-img-top thumbnail-product" src="img/pantalon.jpg" class="card-img-top" alt="">
-            </div>
-
-            <div class="card-body">
-              <p class="card-text">
-              <div class="lead text-secondary fw-bold">
-                OFERTA
-              </div>
-              <br>
-              <div class="lead text-danger">
-                <span class="sale-real-price fw-bold">
-                  8.999
-                </span>
-              </div>
-              <br>
-              Pantalón de genero mujer color beige
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-
-          <div class="card-mb-4 box-shadow">
-            <div class="text-center">
-              <img class="card-img-top thumbnail-product" src="img/pantalon.jpg" class="card-img-top" alt="">
-            </div>
-
-            <div class="card-body">
-              <p class="card-text">
-              <div class="lead text-secondary fw-bold">
-                OFERTA
-              </div>
-              <br>
-              <div class="lead text-danger">
-                <span class="sale-real-price fw-bold">
-                  8.999
-                </span>
-              </div>
-              <br>
-              Pantalón de genero mujer color beige
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-
-          <div class="card-mb-4 box-shadow">
-            <div class="text-center">
-              <img class="card-img-top thumbnail-product" src="img/pantalon.jpg" class="card-img-top" alt="">
-            </div>
-
-            <div class="card-body">
-              <p class="card-text">
-              <div class="lead text-secondary fw-bold">
-                OFERTA
-              </div>
-              <br>
-              <div class="lead text-danger">
-                <span class="sale-real-price fw-bold">
-                  8.999
-                </span>
-              </div>
-              <br>
-              Pantalón de genero mujer color beige
-              </p>
-            </div>
-          </div>
-        </div>
-        
-
-
-
-      </div>
+        <h2 style="color: red;">
+            Participa en el concurso de ropa por compras de mas de $30.000 pesos
+        </h2>
     </div>
+
+    <br><br>
+
+
+
+
+    <div class="container-fluid">
+        <div class="row" id="fila">
+
+        </div>
     </div>
 
     <!-- JQuery -->
@@ -255,7 +72,7 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
 
-    <script src="js/obtener_user.js"> </script>
+    <script src="js/ropa.js"> </script>
   </body>
 
 
